--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>Example</title>
 
-<link rel="stylesheet" href="app.css?<%= ts %>">
+<link rel="stylesheet" href="all.css?<%= ts %>">
 
 <body></body>
 
