Exclude react from components

--- a/html/index.html
+++ b/html/index.html
@@ -6,5 +6,6 @@
 
 <body></body>
 
+<script src="global.react.js?<%= ts %>"></script>
 <script src="vendor.js?<%= ts %>"></script>
 <script src="app.js?<%= ts %>"></script>
