Support CDN publish

--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <title>Example</title>
 
-<link rel="stylesheet" href="all.css?<%= ts %>">
+<link rel="stylesheet" href="<%= dist %>/all.css?<%= ts %>">
 
 <body></body>
 
-<script src="global.react.js?<%= ts %>"></script>
-<script src="vendor.js?<%= ts %>"></script>
-<script src="app.js?<%= ts %>"></script>
+<script src="<%= dist %>/global.react.js?<%= ts %>"></script>
+<script src="<%= dist %>/vendor.js?<%= ts %>"></script>
+<script src="<%= dist %>/app.js?<%= ts %>"></script>
