--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <title>Example</title>
 
-<link rel="stylesheet" href="<%= dist %>/all.css?<%= ts %>">
+<link rel="stylesheet" href="{{dist}}/all.css?{{ts}}">
 
 <body></body>
 
-<script src="<%= dist %>/global.react.js?<%= ts %>"></script>
-<script src="<%= dist %>/vendor.js?<%= ts %>"></script>
-<script src="<%= dist %>/app.js?<%= ts %>"></script>
+<script src="{{dist}}/global.react.js?{{ts}}"></script>
+<script src="{{dist}}/vendor.js?{{ts}}"></script>
+<script src="{{dist}}/app.js?{{ts}}"></script>
