--- a/static/html/index.html
+++ b/static/html/index.html
@@ -2,10 +2,7 @@
 <meta charset="utf-8">
 <title>Example</title>
 
-<link rel="stylesheet" href="{{{dist}}}/app.css?{{ts}}">
-
 <body></body>
 
-<script src="{{{dist}}}/global.react.js?{{ts}}"></script>
-<script src="{{{dist}}}/vendor.jsx?{{ts}}"></script>
-<script src="{{{dist}}}/app.jsx?{{ts}}"></script>
+<script src="../dist/react-core.js"></script>
+<script src="../dist/app.js"></script>
