--- a/example/html/index.html
+++ b/example/html/index.html
@@ -4,5 +4,5 @@
 
 <body></body>
 
-<script src="../dist/react-core.js"></script>
+<script src="../dist/react-toolkit.min.js"></script>
 <script src="../dist/app.js"></script>
