Compile HTML to dist. #5

--- a/example/html/index.html
+++ b/example/html/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>Example</title>
 
-<body></body>
+<section></section>
 
-<script src="../dist/react-toolkit.min.js"></script>
-<script src="../dist/app.js"></script>
+<script src="./react-toolkit.min.js"></script>
+<script src="./app.min.js?{%= Date.now() %}"></script>
