Replace timestamp with webpack hash

--- a/example/html/index.html
+++ b/example/html/index.html
@@ -5,4 +5,4 @@
 <section></section>
 
 <script src="./react-toolkit.min.js"></script>
-<script src="./app.min.js?{%= Date.now() %}"></script>
+<script src="./app.min.js?{%= o.webpack.hash %}"></script>
