Modify a simple example

--- a/example/html/index.html
+++ b/example/html/index.html
@@ -4,5 +4,5 @@
 
 <section></section>
 
-<script src="./react-toolkit.min.js"></script>
+<script src="./inferno-toolkit.min.js"></script>
 <script src="./app.min.js?{%= o.webpack.hash %}"></script>
