--- a/example/html/index.html
+++ b/example/html/index.html
@@ -5,4 +5,4 @@
 <section></section>
 
 <script src="./react-lib.min.js"></script>
-<script src="./index.min.js?{%= o.webpack.hash %}"></script>
+<script src="./index.min.js?<%= webpack.hash %>"></script>
